--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
@@ -7,7 +7,9 @@
     <artifactId>jbotan</artifactId>
     <version>0.1</version>
     <name>JBotan</name>
-    <description>A java plugin library to work with jbots framework and reports analytics using botan API for telegram bots</description>
+    <description>A java plugin library to work with jbots framework and reports analytics using botan API for telegram
+        bots
+    </description>
     <url>https://github.com/shibme/jbotan</url>
 
     <issueManagement>
